# prj1-medic-agent

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
docs/: ARCHITECTURE.md  CONVENTIONS.md  DEVELOPMENT_PLAN.md  PRD.md
docs/superpowers/plans/: 2026-06-16-knowledge-graph-integration.md  2026-06-16-v2-multiagent-orchestration.md
src/medic_agent/agents/: ambient_agent.py  coding_agent.py  judge.py  orchestrator.py  router.py  state.py
src/medic_agent/config/: prompts.py  settings.py
src/medic_agent/evaluation/: runner.py
src/medic_agent/llm/: client.py
src/medic_agent/observability/: tracer.py
src/medic_agent/rag/: embedder.py  entity_extractor.py  graph_store.py  ingestor.py  retriever.py  store.py
src/medic_agent/ui/: app.py
tests/agents/: test_ambient_agent.py  test_coding_agent.py  test_judge.py  test_orchestrator.py  test_prompts.py  test_router.py  test_runner_router.py  test_state.py
tests/eval/: baseline.json  golden_cases.json  test_eval.py
tests/llm/: test_client.py  test_complete.py
tests/observability/: test_tracer.py
tests/rag/: test_embedder.py  test_entity_extractor.py  test_graph_store.py  test_ingestor.py  test_retriever.py  test_store.py
