[project]
name = "medic-agent"
version = "0.1.0"
description = "Healthcare-focused AI agent with multi-LLM support"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.83.14",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medic_agent"]
