[project]
name = "medic-agent"
version = "0.1.0"
description = "Healthcare-focused AI agent with multi-LLM support"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "huggingface-hub>=1.14.0",
    "langfuse>=4.6.1",
    "langgraph>=1.1.10",
    "litellm>=1.83.14",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
    "ragas>=0.4.3",
    "streamlit>=1.57.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medic_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not eval'"
markers = [
    "eval: integration eval tests that make real LLM calls (run with -m eval)",
]
